GET all envelopes
